Add x64/x86 solution configurations
.NET Core doesn't really have AnyCPU executables, and due to the UxThemeEx
dependency we cannot run as AnyCPU anyway.

--- a/Source/ThemeBrowser/ThemeBrowser.csproj
+++ b/Source/ThemeBrowser/ThemeBrowser.csproj
@@ -9,6 +9,8 @@
     <WarningLevel>4</WarningLevel>
     <ApplicationIcon>ThemeBrowser.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Platforms>x86;x64</Platforms>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Windows.Interactivity">
