--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -11,6 +11,7 @@
     <releaseNotes></releaseNotes>
     <description>An accurate Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 8 and Windows 10.</description>
     <tags>wpf theme aero</tags>
+    <repository type="git" url="https://github.com/gix/PresentationTheme.Aero" commit="$RepositoryCommit$"/>
     <references>
       <group targetFramework=".NETFramework4.5">
         <reference file="PresentationTheme.Aero.dll"/>
@@ -76,12 +77,5 @@
     <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
     <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
     <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="PresentationTheme.Aero\**\*.cs" target="src\PresentationTheme.Aero"/>
-    <file src="PresentationTheme.Aero.Win8\**\*.cs" target="src\PresentationTheme.Aero.Win8"/>
-    <file src="PresentationTheme.AeroLite.Win8\**\*.cs" target="src\PresentationTheme.AeroLite.Win8"/>
-    <file src="PresentationTheme.HighContrast.Win8\**\*.cs" target="src\PresentationTheme.HighContrast.Win8"/>
-    <file src="PresentationTheme.Aero.Win10\**\*.cs" target="src\PresentationTheme.Aero.Win10"/>
-    <file src="PresentationTheme.AeroLite.Win10\**\*.cs" target="src\PresentationTheme.AeroLite.Win10"/>
-    <file src="PresentationTheme.HighContrast.Win10\**\*.cs" target="src\PresentationTheme.HighContrast.Win10"/>
   </files>
 </package>
