--- a/Source/PresentationTheme.AeroLite.Win8/PresentationTheme.AeroLite.Win8.csproj
+++ b/Source/PresentationTheme.AeroLite.Win8/PresentationTheme.AeroLite.Win8.csproj
@@ -3,12 +3,19 @@
     <OutputType>Library</OutputType>
     <TargetFrameworks>netcoreapp3.0;net45</TargetFrameworks>
     <UseWPF>true</UseWPF>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PresentationTheme.Aero\PresentationTheme.Aero.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Resource Include="Resources\Progress.MoveOverlay.png" />
     <Resource Include="Resources\Progress.PulseOverlay.png" />
