--- a/Source/UxThemeEx/packages.config
+++ b/Source/UxThemeEx/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="EasyHookNativePackage" version="2.7.6789" targetFramework="native" />
   <package id="EasyHookNativePackage.redist" version="2.7.6789" targetFramework="native" />
+  <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta2-19367-01" targetFramework="native" developmentDependency="true" />
+  <package id="Microsoft.SourceLink.Common" version="1.0.0-beta2-19367-01" targetFramework="native" developmentDependency="true" />
+  <package id="Microsoft.SourceLink.GitHub" version="1.0.0-beta2-19367-01" targetFramework="native" developmentDependency="true" />
 </packages>
