--- a/Source/PresentationTheme.Aero.targets
+++ b/Source/PresentationTheme.Aero.targets
@@ -1,17 +1,24 @@
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project>
+  <!-- This targets file ensures that the usually unreferenced theme assemblies
+       are copied to the output directory and are available during development
+       without any manual steps. -->
+
   <PropertyGroup>
-    <PresentationThemeTargetFramework Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp'">netcoreapp3.0</PresentationThemeTargetFramework>
-    <PresentationThemeTargetFramework Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">net45</PresentationThemeTargetFramework>
+    <PresentationThemeTargetFrameworkFolder Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp'">runtimes\win\lib\netcoreapp3.0</PresentationThemeTargetFrameworkFolder>
+    <PresentationThemeTargetFrameworkFolder Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">lib\net45</PresentationThemeTargetFrameworkFolder>
   </PropertyGroup>
 
   <ItemGroup>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.Aero.Win8.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.AeroLite.Win8.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.HighContrast.Win8.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.Aero.Win10.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.AeroLite.Win10.*"/>
-    <PresentationThemeAeroThemeAssembly Include="$(MSBuildThisFileDirectory)..\lib\$(PresentationThemeTargetFramework)\PresentationTheme.HighContrast.Win10.*"/>
-    <None Include="@(PresentationThemeAeroThemeAssembly)">
+    <PresentationThemeAssembly Include="$(MSBuildThisFileDirectory)..\$(PresentationThemeTargetFrameworkFolder)\PresentationTheme.Aero.Win8.*"/>
+    <PresentationThemeAssembly Include="$(MSBuildThisFileDirectory)..\$(PresentationThemeTargetFrameworkFolder)\PresentationTheme.AeroLite.Win8.*"/>
+    <PresentationThemeAssembly Include="$(MSBuildThisFileDirectory)..\$(PresentationThemeTargetFrameworkFolder)\PresentationTheme.HighContrast.Win8.*"/>
+    <PresentationThemeAssembly Include="$(MSBuildThisFileDirectory)..\$(PresentationThemeTargetFrameworkFolder)\PresentationTheme.Aero.Win10.*"/>
+    <PresentationThemeAssembly Include="$(MSBuildThisFileDirectory)..\$(PresentationThemeTargetFrameworkFolder)\PresentationTheme.AeroLite.Win10.*"/>
+    <PresentationThemeAssembly Include="$(MSBuildThisFileDirectory)..\$(PresentationThemeTargetFrameworkFolder)\PresentationTheme.HighContrast.Win10.*"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="@(PresentationThemeAssembly)">
       <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
