--- a/Source/Samples/NetCoreExtLib.HighContrast.Win10/NetCoreExtLib.HighContrast.Win10.csproj
+++ b/Source/Samples/NetCoreExtLib.HighContrast.Win10/NetCoreExtLib.HighContrast.Win10.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <OutputPath>$(OutputPath)Samples\NetCore\</OutputPath>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\NetCoreExtLib\NetCoreExtLib.csproj" />
