--- a/Source/Samples/NetCoreLib/NetCoreLib.csproj
+++ b/Source/Samples/NetCoreLib/NetCoreLib.csproj
@@ -4,5 +4,6 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <OutputPath>$(OutputPath)Samples\NetCore\</OutputPath>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 </Project>
