--- a/Source/Samples/NetFxApp/NetFxApp.csproj
+++ b/Source/Samples/NetFxApp/NetFxApp.csproj
@@ -15,6 +15,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
     <OutputPath>$(OutputPath)Samples\NetFx\</OutputPath>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
