--- a/Source/Samples/NetFxExtLib.HighContrast.Win10/NetFxExtLib.HighContrast.Win10.csproj
+++ b/Source/Samples/NetFxExtLib.HighContrast.Win10/NetFxExtLib.HighContrast.Win10.csproj
@@ -14,6 +14,7 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <OutputPath>$(OutputPath)Samples\NetFx\</OutputPath>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
