--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -9,19 +9,19 @@
     <projectUrl>https://github.com/gix/PresentationTheme.Aero</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <releaseNotes>https://github.com/gix/PresentationTheme.Aero/blob/$RepositoryCommit$/CHANGELOG.md</releaseNotes>
-    <description>An accurate Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 8 and Windows 10.</description>
+    <description>A highly polished Windows Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 8 and Windows 10.</description>
     <tags>wpf theme aero</tags>
     <repository type="git" url="https://github.com/gix/PresentationTheme.Aero" commit="$RepositoryCommit$"/>
     <references>
-      <group targetFramework=".NETFramework4.5">
+      <group targetFramework="net45">
         <reference file="PresentationTheme.Aero.dll"/>
       </group>
-      <group targetFramework=".NETCoreApp3.0">
+      <group targetFramework="netcoreapp3.0">
         <reference file="PresentationTheme.Aero.dll"/>
       </group>
     </references>
     <frameworkReferences>
-      <group targetFramework=".NETCoreApp3.0">
+      <group targetFramework="netcoreapp3.0">
         <frameworkReference name="Microsoft.WindowsDesktop.App"/>
       </group>
     </frameworkReferences>
