--- a/Source/UxThemeEx/packages.config
+++ b/Source/UxThemeEx/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EasyHookNativePackage" version="2.7.6789" targetFramework="native" />
-  <package id="EasyHookNativePackage.redist" version="2.7.6789" targetFramework="native" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0" targetFramework="native" developmentDependency="true" />
   <package id="Microsoft.SourceLink.Common" version="1.0.0" targetFramework="native" developmentDependency="true" />
   <package id="Microsoft.SourceLink.GitHub" version="1.0.0" targetFramework="native" developmentDependency="true" />
+  <package id="presentationtheme-aero-deps" version="1.0.0" targetFramework="native" />
 </packages>
