--- a/Source/ThemeCore/ThemeCore.csproj
+++ b/Source/ThemeCore/ThemeCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.0;net462</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <ProjectGuid>{839BCDAF-C880-4F9E-B3B6-388C2AE77156}</ProjectGuid>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
